# json5-to-json

./: .deny.toml  Cargo.toml  LICENCE  README  README.md  justfile
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: actions.yml  release.yml  rust.yml
src/: main.rs
