[package]
name = "json5-to-json"
version = "0.1.2"
authors = ["Callum Oakley <c.oakley108@gmail.com>"]
description = "A bare-bones tool for converting JSON5 to plain JSON."
license = "ISC"
repository = "https://github.com/callum-oakley/json5-to-json"
readme = "README.md"
keywords = ["json5", "to", "json", "translate", "convert"]
edition = "2018"

[dependencies]
json5 = "0.2"
serde_json = "1.0"
