[package]
name = "j5j"
version = "0.2.0"
description = "A bare-bones tool for converting JSON5 to plain JSON."
license = "ISC"
repository = "https://github.com/olix0r/j5j"
readme = "README.md"
keywords = ["json5", "json", "translate", "convert"]
edition = "2021"

[dependencies]
json5 = "0.4"
serde_json = "1"

[dependencies.clap]
version = "3"
features = ["derive", "env", "std"]
